set example env

--- a/packages/api/.env.example
+++ b/packages/api/.env.example
@@ -1,9 +1,9 @@
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
-REFRESH_TOKEN_SECRET=
-ACCESS_TOKEN_SECRET=
-SERVER_URL=
-SLACK_REPORT_URL=
-SLACK_SIGNING_SECRET=
-APPLE_EMAIL=
-APPLE_PASSWORD=
+REFRESH_TOKEN_SECRET=qowiej2109euj21ndlk21
+ACCESS_TOKEN_SECRET=oqipwejqowd12098edh1noi2
+SERVER_URL=http://localhost:3001
+SLACK_REPORT_URL=ignore
+SLACK_SIGNING_SECRET=ignore
+APPLE_EMAIL=ignore@ignore.com
+APPLE_PASSWORD=doesnotmatter
