--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -7,7 +7,8 @@
     "watch": "tsc -w",
     "build": "tsc",
     "deploy": "./scripts/deploy.sh",
-    "dev": "nodemon dist/index.js"
+    "dev": "nodemon dist/index.js",
+    "seed": "ts-node src/runSeed.ts"
   },
   "keywords": [],
   "author": "",
@@ -53,6 +54,7 @@
     "@types/ws": "^7.4.0",
     "concurrently": "^5.3.0",
     "nodemon": "^2.0.6",
+    "ts-node": "^9.1.1",
     "typescript": "^4.0.5"
   }
 }
