Revert "black background"
This reverts commit 2e1f37918e6dd672097c13e4936d3e76791ed102.

--- a/packages/app/app.json
+++ b/packages/app/app.json
@@ -32,6 +32,7 @@
     "android": {
       "permissions": [],
       "useNextNotificationsApi": true,
+      "googleServicesFile": "./google-services.json",
       "versionCode": 390010218,
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
